--- a/app/src/main/res/layout/activity_comprass.xml
+++ b/app/src/main/res/layout/activity_comprass.xml
@@ -86,7 +86,7 @@
                         android:id="@+id/sp2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/textView9"
+                        android:layout_below="@+id/rango"
                         android:layout_margin="15dp" />
 
                     <TableLayout
@@ -340,6 +340,16 @@
 
     </ScrollView>
 
+
+    <Button
+        android:id="@+id/cancel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Cancelar"
+        app:backgroundTint="#FF0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
     <Button
         android:id="@+id/sigu"
         android:layout_width="match_parent"
@@ -351,16 +361,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-    <Button
-        android:id="@+id/cancel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Cancelar"
-        app:backgroundTint="#FF0000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <Button
         android:id="@+id/calc"
         android:layout_width="match_parent"
