--- a/app/src/main/res/layout/activity_presupuesto_caja.xml
+++ b/app/src/main/res/layout/activity_presupuesto_caja.xml
@@ -46,6 +46,13 @@
                                 android:textSize="18sp"
                                 android:textStyle="bold" />
 
+                            <Button
+                                android:id="@+id/btnLoad"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="OBTENER DATOS"
+                                android:onClick="llenar"/>
+
 
                         </TableRow>
 
@@ -927,10 +934,14 @@
                                 android:layout_weight="1"
                                 android:text=" " />
                         </TableRow>
+
                     </TableLayout>
 
 
+
+
                 </LinearLayout>
+
             </LinearLayout>
         </ScrollView>
     </HorizontalScrollView>
