--- a/app/src/main/res/layout/activity_presupuesto_caja.xml
+++ b/app/src/main/res/layout/activity_presupuesto_caja.xml
@@ -291,7 +291,7 @@
                     android:layout_height="match_parent">
 
                     <TextView
-                        android:id="@+id/textView69"
+                        android:id="@+id/sesen2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="SALDO FINAL DE EFECTIVO PROYECTADO SIN FINANCIAMIENTO"
