--- a/app/src/main/res/layout/activity_proyeccion_ventas.xml
+++ b/app/src/main/res/layout/activity_proyeccion_ventas.xml
@@ -277,7 +277,7 @@
                                 android:textSize="16sp" />
 
                             <TextView
-                                android:id="@+id/textView69"
+                                android:id="@+id/sesen2"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="0.0"
