--- a/app/src/main/res/layout/activity_sueldos.xml
+++ b/app/src/main/res/layout/activity_sueldos.xml
@@ -20,50 +20,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar5"
-        android:layout_width="411dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="542dp"
-        android:background="#00509A"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:layout_marginLeft="68dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="67dp"
-        android:layout_marginRight="67dp"
-        android:layout_marginBottom="554dp"
+        android:layout_marginStart="67dp"
+        android:layout_marginLeft="67dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginRight="68dp"
         android:text="Sueldos y Salarios"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/incremento"
-        android:layout_width="247dp"
-        android:layout_height="42dp"
+        android:layout_width="225dp"
+        android:layout_height="38dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="61dp"
         android:ems="10"
+        android:hint="%Incremento Salarial"
         android:inputType="textPersonName"
-        android:text="%Incremento Salarial"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -102,12 +84,14 @@
         android:layout_height="46dp"
         android:layout_marginStart="254dp"
         android:layout_marginLeft="254dp"
-        android:layout_marginTop="391dp"
+        android:layout_marginTop="404dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginBottom="153dp"
         android:ems="10"
+        android:hint="Número meses"
         android:inputType="textPersonName"
-        android:text="Número meses"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -144,12 +128,14 @@
         android:layout_height="47dp"
         android:layout_marginStart="254dp"
         android:layout_marginLeft="254dp"
-        android:layout_marginTop="450dp"
+        android:layout_marginTop="474dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginBottom="82dp"
         android:ems="10"
+        android:hint="Número meses"
         android:inputType="textPersonName"
-        android:text="Número meses"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -214,13 +200,13 @@
 
     <TextView
         android:id="@+id/resAporte1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="242dp"
-        android:layout_marginLeft="242dp"
-        android:layout_marginTop="189dp"
-        android:layout_marginEnd="131dp"
-        android:layout_marginRight="131dp"
+        android:layout_width="38dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="263dp"
+        android:layout_marginLeft="263dp"
+        android:layout_marginTop="186dp"
+        android:layout_marginEnd="110dp"
+        android:layout_marginRight="110dp"
         android:text="0,00"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -259,14 +245,14 @@
 
     <EditText
         android:id="@+id/totalGanadoAntes"
-        android:layout_width="183dp"
-        android:layout_height="50dp"
+        android:layout_width="219dp"
+        android:layout_height="53dp"
         android:layout_marginStart="18dp"
         android:layout_marginLeft="18dp"
         android:layout_marginTop="169dp"
         android:ems="10"
+        android:hint="Ingresar total ganado"
         android:inputType="textPersonName"
-        android:text="Ingresar total ganado"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
