--- a/app/src/main/res/layout/activity_commercial_interest.xml
+++ b/app/src/main/res/layout/activity_commercial_interest.xml
@@ -344,10 +344,23 @@
                     android:layout_marginTop="10sp"
                     android:layout_marginLeft="20sp"
                     android:layout_marginRight="20sp"
-                    android:layout_marginBottom="10sp"
+                    android:layout_marginBottom="5sp"
                     android:backgroundTint="@color/blue_app"
                     android:onClick="viewSpendingInterest"
                     android:text="@string/show_expense_interes"
+                    app:cornerRadius="10sp" />
+
+                <Button
+                    android:id="@+id/btn_show_back"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0sp"
+                    android:layout_marginLeft="20sp"
+                    android:layout_marginRight="20sp"
+                    android:layout_marginBottom="10sp"
+                    android:backgroundTint="@color/red_app"
+                    android:onClick="volverinicio"
+                    android:text="@string/volver"
                     app:cornerRadius="10sp" />
 
             </LinearLayout>
